# LibMultiLabel

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  configurations.py  data_utils.py  evaluate.py  index.rst  linear_trainer.py  main.py  metrics.py  model.py  plot_dataset_tutorial.py  plot_linear_quickstart.py  pyproject.toml  requirements.txt  requirements_nn.txt  requirements_parameter_search.txt  run_and_store_results.py  search_params.py  set_value.py  setup.cfg  setup.py  torch_trainer.py  utils.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: basic_test.yml  publish-to-test-pypi.yml  python-publish.yml
config/EUR-Lex-57k/: cbigru_lwan.yml  cbigru_lwan_chalkidis.yml  cbigru_lwan_chalkidis_nodrop.yml  cbigru_lwan_p.yml  ccnn_lwan.yml  ccnn_lwan_p.yml  zbigru_inner.yml  zbigru_inner2.yml  zbigru_linear.yml  zbigru_linear_tune.yml  zcnn_inner.yml  zcnn_inner2.yml  zcnn_inner2_tune.yml  zcnn_inner_tanh.yml  zcnn_inner_tune.yml  zlacnn_tune.yml  zlacnn_v2.yml  zmbigru.yml  zmcnn.yml  zocnnlwan.yml  zscnn.yml  zscnn_tune.yml  ztcnn.yml  ztcnn_tune.yml
config/MIMIC/: cbigru_lwan.yml  cbigru_lwan_chalkidis.yml  cbigru_lwan_p.yml  ccnn_lwan.yml  ccnn_lwan_p.yml  kim_cnn.yml  zbigru_inner_tune.yml  zmbigru.yml  zmcnn.yml  ztcnn.yml  ztcnn_tune.yml  ztcnn_tune2.yml
config/MIMIC-50/: zbigru_inner.yml  zbigru_inner_tune.yml  zcnn_inner.yml  zcnn_inner2.yml  zcnn_inner2_tune.yml  zcnn_inner_tanh.yml  zcnn_inner_tune.yml  zlacnn.yml  zlacnn_tune.yml  zlacnn_v2.yml  zocnnlwan.yml  zocnnlwan_tune.yml  zscnn.yml  zscnn_tune.yml  ztcnn.yml  ztcnn_tune.yml
docs/: Makefile  cli_index.rst  conf.py  data_format.rst  data_preparation.rst  index.rst  installation.rst  library&api_index.rst  library_index.rst  linear.rst  make.bat  neural_networks.rst  nn_tutorial.rst  papers.rst  readme  requirements.txt  search_retrain.rst  tree.rst  tutorial.rst
docs/_static/: custom.css
docs/api/: api.rst  bert_tutorial.rst  dataset_example.rst  linear.rst  linear_tutorial.rst  load_dataset_example.rst  nn.rst  nn_networks.rst  nn_tutorial.rst  quickstart.rst
docs/api_tutorial/: nn_tutorial.rst
docs/auto_examples/: index.rst  plot_KimCNN_tutorial.py  plot_KimCNN_tutorial.rst  plot_bert_tutorial.py  plot_bert_tutorial.rst  plot_dataset_tutorial.py  plot_dataset_tutorial.rst  plot_dataset_tutorial_codeobj.pickle  plot_linear_tutorial.rst  plot_linear_tutorial_codeobj.pickle  plot_nn_tutorial.rst  plot_nn_tutorial_codeobj.pickle
docs/cli/: cli.rst  data_format.rst  flags.rst  genflags.py  linear.rst  nn.rst  options.rst  ov_data_format.rst  quickstart.rst
docs/examples/: bert_quickstart.py  dataset_component.py  dataset_example.py  dataset_linear_example.py  gen_examples.py  kimcnn_quickstart.py  linear_component.py  linear_quickstart.py  nn_component.py  nn_quickstart.py  plot_KimCNN_quickstart.py  plot_KimCNN_tutorial.py  plot_bert_quickstart.py  plot_bert_tutorial.py  plot_dataset_tutorial.py  plot_linear_feature_gen.py  plot_linear_gridsearch_tutorial.py  plot_linear_quickstart.py  plot_linear_tree_tutorial.py  plot_linear_tutorial.py  plot_multi_label.py  plot_nn_tutorial.py  plot_single_multi_label_tutorial.py
docs/guides/: cli.rst  linear.rst  linear_guides.rst  nn.rst  nn_guides.rst
docs/modules/: linear.rst
docs/tutorial/: nn_api_tutorial.rst  nn_cli_tutorial.rst  tutorial.rst
docs/tutorials/: AttentionXML.rst  Parameter Selection for Neural Networks.rst  Parameter_Selection_for_Neural_Networks.rst
example_config/Amazon-3M/: attentionxml.yml
example_config/Amazon-670K/: attentionxml.yml
example_config/AmazonCat-13K/: attentionxml.yml  bert_lwan.yml  bigru_lwan.yml  bigru_lwan_tune.yml  bigru_lwan_tune_2.yml  fastattentionxml.yml
example_config/EUR-Lex-57k/: README.md  attentionxml.yml  bert.yml  (+12 more)
libmultilabel/: callbacks.py  common_utils.py  config.py  configs.py  data_utils.py  evaluate.py  logging.py  metrics.py  model.py  setup.cfg  torch_trainer.py  utils.py
libmultilabel/linear/: __init__.py  data_utils.py  estimator  estimator.py  kmeans.py  linear.py  metrics.py  preprocessor.py  sklearn_helper.py  tree.py  utils.py
libmultilabel/networks/: __init__.py  base.py  bigru.py  caml.py  cnn.py  kim_cnn.py  vanilla_cnn.py  xml_cnn.py
libmultilabel/nn/: __init__.py  attentionxml.py  callbacks.py  cluster.py  data_utils.py  dataset_attentionxml.py  datasets.py  datasets_AttentionXML.py  metrics.py  model.py  model_AttentionXML.py  model_attentionxml.py  nn_utils.py  optimizer.py  plt.py
libmultilabel/nn/networks/: __init__.py  bert.py  bert_attention.py  bert_attn.py  bert_dataset.py  bert_lwan.py  bigru.py  caml.py  kim_cnn.py  laat.py  labelwise_attention_networks.py  modules.py  token_dataset.py  vanilla_cnn.py  word_dataset.py  xml_cnn.py  zero_shot.py
network/: __init__.py  base.py  caml.py  cnn.py
networks/: __init__.py  base.py  caml.py  inner.py  kim_cnn.py  vanilla_cnn.py  xml_cnn.py
requirements/: linear.txt  nn-param-search.txt  nn.txt
tests/: autotest.sh  basic.sh  compare_components.py  readme  short.sh
utils/: __init__.py  log.py  utils.py
(+65 files in other folders)
