[metadata]
name = libmultilabel
version = 0.6.0
author = LibMultiLabel Team
license = MIT License
license_file = LICENSE
description = A library for multi-label text classification
long_description = See documentation here: https://www.csie.ntu.edu.tw/~cjlin/libmultilabel
url = https://github.com/ASUS-AICS/LibMultiLabel
project_urls =
    Bug Tracker = https://github.com/ASUS-AICS/LibMultiLabel/issues
    Documentation = https://www.csie.ntu.edu.tw/~cjlin/libmultilabel
    Source Code = https://github.com/ASUS-AICS/LibMultiLabel/
classifiers =
    Environment :: GPU :: NVIDIA CUDA :: 11.8
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    liblinear-multicore
    numba
    pandas>1.3.0
    PyYAML
    scikit-learn
    scipy
    tqdm

python_requires = >=3.8

[options.extras_require]
nn =
    fsspec>=2023.5.0
    lightning==2.0.9
    nltk
    torch==2.1.2
    torchmetrics==1.2.1
    torchtext==0.16.2
    transformers==4.36.2
    typing-extensions>=4.8.0


[options.packages.find]
exclude =
    docs
