[metadata]
name = libmultilabel
version = 0.5.2
author = LibMultiLabel Team
license = MIT License
license_file = LICENSE
description = A library for multi-label text classification
long_description = See documentation here: https://www.csie.ntu.edu.tw/~cjlin/libmultilabel
url = https://github.com/ASUS-AICS/LibMultiLabel
project_urls =
    Bug Tracker = https://github.com/ASUS-AICS/LibMultiLabel/issues
    Documentation = https://www.csie.ntu.edu.tw/~cjlin/libmultilabel
    Source Code = https://github.com/ASUS-AICS/LibMultiLabel/
classifiers =
    Environment :: GPU :: NVIDIA CUDA :: 11.6
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    liblinear-multicore
    numba
    pandas>1.3.0
    PyYAML
    scikit-learn
    scipy
    tqdm

python_requires = >=3.8

[options.extras_require]
nn =
    nltk
    torch==1.13.1
    torchmetrics==0.10.3
    torchtext==0.14.1
    pytorch-lightning==1.7.7
    transformers==4.28.1


[options.packages.find]
exclude =
    docs
