[metadata]
name = LibMultiLabel
version = 0.0.1
author = LibMultiLabel Team
description = "A NLP library for multi-label text classification"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ASUS-AICS/LibMultiLabel
project_urls =
    Bug Tracker = https://github.com/ASUS-AICS/LibMultiLabel/issues
classifiers =
    Environment :: GPU :: NVIDIA CUDA :: 10.2
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = libmultilabel
packages = find:
install_requires =
    nltk
    pandas
    PyYAML
    scikit-learn
    torch==1.8.0
    torchmetrics==0.3.2
    torchtext==0.9.0
    pytorch-lightning==1.3.5
    tqdm
    liblinear-official
    scipy
extras_require =
    parameter-search = bayesian-optimization; optuna; ray>=1.4.0; ray[tune]
python_requires = >=3.7

[options.packages.find]
where = libmultilabel